[tool.poetry]
name = "pydantic-unset"
version = "0.1.0"
description = ""
authors = ["vipierozan99 <victorpierozan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
rich = "^13.7.1"
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
